@@ -6,6 +6,7 @@
 	- Added test for leak of stub information.
 	- Fix sldns wire2str printout of RR type CAA tags.
 	- Fix sldns int16_data parse.
+	- Fix sldns parse and printout of TSIG RRs.
 
 1 May 2017: Wouter
 	- Fix #1259: "--disable-ecdsa" argument overwritten 
